# osp

./: .cursorrules  .dockerignore  .env.example  .gitignore  .lighthouserc.json  .sentryclirc  ALERT_RULES_VERIFICATION.md  CLAUDE.md  DESKTOP_FIXES.md  MOTION_DETECTION_SETUP.md  PLANNING.md  README.md  RUNNING.md  TODO.md  bash.exe.stackdump  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  test-alert-rules.sh  tsconfig.base.json  turbo.json
.github/: CODEOWNERS  labeler.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  deploy.yml  desktop.yml  docker.yml  e2e.yml  labeler.yml  lighthouse.yml  pr-comment.yml  preview.yml  production.yml  release.yml  stale.yml  supabase-migrate.yml
apps/desktop/: README.md  index.html  package.json
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md  icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/mobile/: app.json  package.json  tsconfig.json
docs/: API-VERSIONING.md  CLIENT_SETUP.md  CONSISTENCY-STANDARDS.md  CONTRIBUTING.md  ENV.md  HANDOFF.md  MASTER-REFERENCE.md  PHASE2-CHANGELOG.md  PRD.md  PRODUCTION-CHECKLIST.md  REFERENCE.md  RUNBOOK.md  RUNNING.md  SETUP-GUIDE.md  SYSTEM-ARCHITECTURE.md  TECHNICAL-DESIGN.md  WEB-STATUS.md  guide.md  reference.md
scripts/: deploy-fly.sh  deploy-vercel.sh  package-edge-bundle.sh  seed-dev.sh  setup-dev.sh  smoke-motion.sh
supabase/: config.toml
(+361 files in other folders)
