[package]
name = "osp-desktop"
version = "0.1.0"
description = "OSP — Open Surveillance Platform desktop app"
authors = []
license = ""
repository = ""
default-run = "osp-desktop"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "osp_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
